Compile against java 17 for future compatibility with mobile / libGDX. Updated comments.